@@ -1,56 +1,55 @@
-package com.example.demo;
+package com.example.demo.service.impl;
 
-import com.example.demo.entity.*;
+import com.example.demo.entity.Crop;
+import com.example.demo.entity.Farm;
+import com.example.demo.entity.Fertilizer;
+import com.example.demo.entity.Suggestion;
 import com.example.demo.repository.SuggestionRepository;
-import com.example.demo.service.FarmService;
 import com.example.demo.service.CatalogService;
-
+import com.example.demo.service.FarmService;
+import com.example.demo.service.SuggestionService;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
 import java.util.stream.Collectors;
 
-public class SuggestionServiceImpl {
-
+@Service
+@Transactional
+public class SuggestionServiceImpl implements SuggestionService {
     private final FarmService farmService;
     private final CatalogService catalogService;
     private final SuggestionRepository suggestionRepository;
 
-    public SuggestionServiceImpl(FarmService farmService,
-                                 CatalogService catalogService,
-                                 SuggestionRepository suggestionRepository) {
+    public SuggestionServiceImpl(FarmService farmService, CatalogService catalogService, SuggestionRepository suggestionRepository) {
         this.farmService = farmService;
         this.catalogService = catalogService;
         this.suggestionRepository = suggestionRepository;
     }
 
+    @Override
     public Suggestion generateSuggestion(Long farmId) {
-
         Farm farm = farmService.getFarmById(farmId);
-
-        List<Crop> crops = catalogService.findSuitableCrops(
-                farm.getSoilPH(),
-                farm.getWaterLevel(),
-                farm.getSeason()
-        );
-
-        List<String> cropNames = crops.stream()
-                .map(Crop::getName)
-                .toList();
-
-        List<Fertilizer> fertilizers =
-                catalogService.findFertilizersForCrops(cropNames);
-
-        Suggestion suggestion = Suggestion.builder()
+        List<Crop> crops = catalogService.findSuitableCrops(farm.getSoilPH(), farm.getWaterLevel(), farm.getSeason());
+        List<String> cropNames = crops.stream().map(Crop::getName).collect(Collectors.toList());
+        List<Fertilizer> fertilizers = catalogService.findFertilizersForCrops(cropNames);
+        
+        String cropStr = String.join(",", cropNames);
+        String fertStr = fertilizers.stream().map(Fertilizer::getName).collect(Collectors.joining(","));
+        
+        Suggestion s = Suggestion.builder()
                 .farm(farm)
-                .suggestedCrops(String.join(",", cropNames))
-                .suggestedFertilizers(
-                        fertilizers.stream()
-                                .map(Fertilizer::getName)
-                                .collect(Collectors.joining(",")))
+                .suggestedCrops(cropStr)
+                .suggestedFertilizers(fertStr)
                 .build();
-
-        return suggestionRepository.save(suggestion);
+        return suggestionRepository.save(s);
     }
 
+    @Override
+    public Suggestion getSuggestion(Long suggestionId) {
+        return suggestionRepository.findById(suggestionId).orElseThrow(() -> new RuntimeException("Not found"));
+    }
+    
+    @Override
     public List<Suggestion> getSuggestionsByFarm(Long farmId) {
         return suggestionRepository.findByFarmId(farmId);
     }
